@@ -8,6 +8,9 @@ import io.github.hectorvent.floci.services.cognito.model.CognitoGroup;
 import io.github.hectorvent.floci.services.cognito.model.CognitoUser;
 import io.github.hectorvent.floci.services.cognito.model.UserPool;
 import io.github.hectorvent.floci.services.cognito.model.UserPoolClient;
+import io.github.hectorvent.floci.services.cognito.verification.CognitoMessageDispatcher;
+import io.github.hectorvent.floci.services.cognito.verification.VerificationCode;
+import io.github.hectorvent.floci.services.cognito.verification.VerificationCodeService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -20,6 +23,12 @@ import java.util.Map;
 import java.util.function.Function;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 class CognitoServiceTest {
 
@@ -37,6 +46,7 @@ class CognitoServiceTest {
                 new InMemoryStorage<>(),
                 new InMemoryStorage<>(),
                 groupStore,
+                new InMemoryStorage<>(), // revokedTokenStore
                 "http://localhost:4566",
                 regionResolver,
                 null
@@ -207,7 +217,22 @@ class CognitoServiceTest {
                 true,
                 true,
                 List.of(" code ", "code", "implicit", "", "implicit"),
-                new ArrayList<>(java.util.Arrays.asList(" openid ", "openid", "email", null, "email"))
+                new ArrayList<>(java.util.Arrays.asList(" openid ", "openid", "email", null, "email")),
+                null,
+                List.of("https://example.com/callback"),
+                "https://example.com/callback",
+                List.of(),
+                null,
+                null,
+                List.of(),
+                null,
+                List.of(),
+                null,
+                List.of(),
+                null,
+                List.of(),
+                null,
+                null
         );
 
         assertNotNull(client.getClientId());
@@ -246,6 +271,215 @@ class CognitoServiceTest {
     }
 
     @Test
+    void createUserPoolClientRejectsInvalidTokenValidityConfiguration() {
+        UserPool pool = service.createUserPool(Map.of("PoolName", "ClientPool"), "us-east-1");
+
+        AwsException exception = assertThrows(
+                AwsException.class,
+                () -> service.createUserPoolClient(
+                        pool.getId(),
+                        "invalid-token-validity-client",
+                        false,
+                        false,
+                        List.of(),
+                        List.of(),
+                        null,
+                        List.of(),
+                        null,
+                        List.of(),
+                        -1,
+                        0,
+                        List.of(),
+                        null,
+                        List.of(),
+                        -7,
+                        List.of(),
+                        Map.of(
+                                "AccessToken", "weeks",
+                                "IdToken", "minutes",
+                                "RefreshToken", "days"
+                        ),
+                        List.of(),
+                        null,
+                        null
+                )
+        );
+
+        assertEquals("InvalidParameterException", exception.getErrorCode());
+    }
+
+    @Test
+    void createUserPoolClientAcceptsRefreshTokenValidityZeroAndCoercesToDefault() {
+        UserPool pool = service.createUserPool(Map.of("PoolName", "ClientPool"), "us-east-1");
+
+        UserPoolClient client = service.createUserPoolClient(
+                pool.getId(),
+                "refresh-default-client",
+                false,
+                false,
+                List.of(),
+                List.of(),
+                null,
+                List.of(),
+                null,
+                List.of(),
+                null,
+                null,
+                List.of(),
+                null,
+                List.of(),
+                0,
+                List.of(),
+                null,
+                List.of(),
+                null,
+                null
+        );
+
+        assertEquals(30, client.getRefreshTokenValidity());
+    }
+
+    @Test
+    void createUserPoolClientRejectsLogoutUrlsWhenOAuthFlowsUserPoolClientIsFalse() {
+        UserPool pool = service.createUserPool(Map.of("PoolName", "ClientPool"), "us-east-1");
+
+        AwsException exception = assertThrows(
+                AwsException.class,
+                () -> service.createUserPoolClient(
+                        pool.getId(),
+                        "invalid-logout-client",
+                        false,
+                        false,
+                        List.of(),
+                        List.of(),
+                        null,
+                        List.of(),
+                        null,
+                        List.of(),
+                        null,
+                        null,
+                        List.of("https://example.com/logout"),
+                        null,
+                        List.of(),
+                        null,
+                        List.of(),
+                        null,
+                        List.of(),
+                        null,
+                        null
+                )
+        );
+
+        assertEquals("InvalidParameterException", exception.getErrorCode());
+    }
+
+    @Test
+    void createUserPoolClientRejectsMixedCaseTokenValidityUnits() {
+        UserPool pool = service.createUserPool(Map.of("PoolName", "ClientPool"), "us-east-1");
+
+        AwsException exception = assertThrows(
+                AwsException.class,
+                () -> service.createUserPoolClient(
+                        pool.getId(),
+                        "invalid-token-unit-client",
+                        false,
+                        false,
+                        List.of(),
+                        List.of(),
+                        null,
+                        List.of(),
+                        null,
+                        List.of(),
+                        1,
+                        1,
+                        List.of(),
+                        null,
+                        List.of(),
+                        7,
+                        List.of(),
+                        Map.of(
+                                "AccessToken", "Hours",
+                                "IdToken", "minutes",
+                                "RefreshToken", "days"
+                        ),
+                        List.of(),
+                        null,
+                        null
+                )
+        );
+
+        assertEquals("InvalidParameterException", exception.getErrorCode());
+    }
+
+    @Test
+    void createUserPoolClientRejectsInconsistentOAuthFlowConfiguration() {
+        UserPool pool = service.createUserPool(Map.of("PoolName", "ClientPool"), "us-east-1");
+
+        AwsException exception = assertThrows(
+                AwsException.class,
+                () -> service.createUserPoolClient(
+                        pool.getId(),
+                        "invalid-oauth-client",
+                        false,
+                        false,
+                        List.of("code"),
+                        List.of("openid"),
+                        null,
+                        List.of("https://example.com/callback"),
+                        "https://example.com/callback",
+                        List.of(),
+                        null,
+                        null,
+                        List.of(),
+                        null,
+                        List.of(),
+                        null,
+                        List.of(),
+                        null,
+                        List.of(),
+                        null,
+                        null
+                )
+        );
+
+        assertEquals("InvalidParameterException", exception.getErrorCode());
+    }
+
+    @Test
+    void createUserPoolClientRejectsDefaultRedirectUriNotInCallbackUrls() {
+        UserPool pool = service.createUserPool(Map.of("PoolName", "ClientPool"), "us-east-1");
+
+        AwsException exception = assertThrows(
+                AwsException.class,
+                () -> service.createUserPoolClient(
+                        pool.getId(),
+                        "invalid-redirect-client",
+                        false,
+                        true,
+                        List.of("code"),
+                        List.of("openid"),
+                        null,
+                        List.of("https://example.com/callback"),
+                        "https://different.example.com/callback",
+                        List.of(),
+                        null,
+                        null,
+                        List.of(),
+                        null,
+                        List.of(),
+                        null,
+                        List.of(),
+                        null,
+                        List.of(),
+                        null,
+                        null
+                )
+        );
+
+        assertEquals("InvalidParameterException", exception.getErrorCode());
+    }
+
+    @Test
     void updateUserPoolClientAllowsClearingListFieldsWithEmptyArrays() {
         UserPool pool = service.createUserPool(Map.of("PoolName", "ClientPool"), "us-east-1");
 
@@ -253,9 +487,9 @@ class CognitoServiceTest {
                 pool.getId(),
                 "client",
                 false,
-                false,
-                List.of(),
-                List.of(),
+                true,
+                List.of("code"),
+                List.of("openid"),
                 null,
                 List.of("https://example.com"),
                 "https://example.com",
@@ -277,12 +511,12 @@ class CognitoServiceTest {
                 pool.getId(),
                 client.getClientId(),
                 null,
-                null,
-                null,
-                null,
-                null,
+                false,
+                List.of(),
                 List.of(),
                 null,
+                List.of(),
+                "",
                 List.of(),
                 null,
                 null,
@@ -304,6 +538,61 @@ class CognitoServiceTest {
         assertEquals(List.of(), updated.getReadAttributes());
         assertEquals(List.of(), updated.getSupportedIdentityProviders());
         assertEquals(List.of(), updated.getWriteAttributes());
+    }
+
+    @Test
+    void updateUserPoolClientAcceptsRefreshTokenValidityZeroAndCoercesToDefault() {
+        UserPool pool = service.createUserPool(Map.of("PoolName", "ClientPool"), "us-east-1");
+
+        UserPoolClient client = service.createUserPoolClient(
+                pool.getId(),
+                "client",
+                false,
+                false,
+                List.of(),
+                List.of(),
+                null,
+                List.of(),
+                null,
+                List.of(),
+                null,
+                null,
+                List.of(),
+                null,
+                List.of(),
+                7,
+                List.of(),
+                null,
+                List.of(),
+                null,
+                null
+        );
+
+        UserPoolClient updated = service.updateUserPoolClient(
+                pool.getId(),
+                client.getClientId(),
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                0,
+                null,
+                null,
+                null,
+                null,
+                null
+        );
+
+        assertEquals(30, updated.getRefreshTokenValidity());
     }
 
     @Test
@@ -766,6 +1055,96 @@ class CognitoServiceTest {
         assertTrue(user.getAttributes().containsKey("sub"),
                 "signUp should auto-generate a sub attribute");
         assertFalse(user.getAttributes().get("sub").isBlank());
+    }
+
+    @Test
+    void signUpWithoutDeliveryTargetFailsBeforePersistingUser() {
+        VerificationCodeService verificationCodeService = mock(VerificationCodeService.class);
+        CognitoMessageDispatcher messageDispatcher = mock(CognitoMessageDispatcher.class);
+        CognitoService serviceWithVerification = new CognitoService(
+                new InMemoryStorage<>(),
+                new InMemoryStorage<>(),
+                new InMemoryStorage<>(),
+                new InMemoryStorage<>(),
+                new InMemoryStorage<>(),
+                new InMemoryStorage<>(),
+                "http://localhost:4566",
+                regionResolver,
+                null,
+                verificationCodeService,
+                messageDispatcher
+        );
+
+        UserPool pool = serviceWithVerification.createUserPool(Map.of("PoolName", "TestPool"), "us-east-1");
+        pool.setAutoVerifiedAttributes(List.of("email"));
+        UserPoolClient client = serviceWithVerification.createUserPoolClient(pool.getId(), "test-client",
+                false, false, List.of(), List.of());
+
+        AwsException ex = assertThrows(AwsException.class, () ->
+                serviceWithVerification.signUp(client.getClientId(), "carol", "Pass1234!", Map.of()));
+        assertEquals("InvalidParameterException", ex.getErrorCode());
+
+        AwsException lookupEx = assertThrows(AwsException.class, () ->
+                serviceWithVerification.adminGetUser(pool.getId(), "carol"));
+        assertEquals("UserNotFoundException", lookupEx.getErrorCode());
+    }
+
+    @Test
+    void signUpRollsBackUserWhenDispatchFails() {
+        VerificationCodeService verificationCodeService = mock(VerificationCodeService.class);
+        CognitoMessageDispatcher messageDispatcher = mock(CognitoMessageDispatcher.class);
+        when(verificationCodeService.issue(any(), any(), eq(VerificationCode.Purpose.SIGNUP_CONFIRMATION), any()))
+                .thenReturn("123456");
+        doThrow(new RuntimeException("SES unavailable")).when(messageDispatcher)
+                .dispatch(any(), any(), eq(VerificationCode.Purpose.SIGNUP_CONFIRMATION), eq("123456"), any());
+
+        CognitoService serviceWithVerification = new CognitoService(
+                new InMemoryStorage<>(),
+                new InMemoryStorage<>(),
+                new InMemoryStorage<>(),
+                new InMemoryStorage<>(),
+                new InMemoryStorage<>(),
+                new InMemoryStorage<>(),
+                "http://localhost:4566",
+                regionResolver,
+                null,
+                verificationCodeService,
+                messageDispatcher
+        );
+
+        UserPool pool = serviceWithVerification.createUserPool(Map.of("PoolName", "TestPool"), "us-east-1");
+        pool.setAutoVerifiedAttributes(List.of("email"));
+        UserPoolClient client = serviceWithVerification.createUserPoolClient(pool.getId(), "test-client",
+                false, false, List.of(), List.of());
+
+        AwsException ex = assertThrows(AwsException.class, () ->
+                serviceWithVerification.signUp(client.getClientId(), "carol", "Pass1234!",
+                        Map.of("email", "carol@example.com")));
+        assertEquals("CodeDeliveryFailureException", ex.getErrorCode());
+        assertEquals(400, ex.getHttpStatus());
+        assertEquals("Failed to deliver the message.", ex.getMessage());
+
+        AwsException lookupEx = assertThrows(AwsException.class, () ->
+                serviceWithVerification.adminGetUser(pool.getId(), "carol"));
+        assertEquals("UserNotFoundException", lookupEx.getErrorCode());
+        verify(verificationCodeService).invalidatePrevious(pool.getId(), "carol",
+                VerificationCode.Purpose.SIGNUP_CONFIRMATION);
+    }
+
+    @Test
+    void signUpReturnsResourceNotFoundAsBadRequestWhenClientMissing() {
+        AwsException ex = assertThrows(AwsException.class, () ->
+                service.signUp("missing-client", "carol", "Pass1234!", Map.of("email", "carol@example.com")));
+        assertEquals("ResourceNotFoundException", ex.getErrorCode());
+        assertEquals(400, ex.getHttpStatus());
+    }
+
+    @Test
+    void confirmSignUpReturnsResourceNotFoundAsBadRequestWhenClientMissing() {
+        AwsException ex = assertThrows(AwsException.class, () ->
+                service.confirmSignUp("missing-client", "carol", "123456"));
+        assertEquals("ResourceNotFoundException", ex.getErrorCode());
+        assertEquals(400, ex.getHttpStatus());
     }
 
     @Test
